// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'should display message if empty docList array' 1`] = `
Array [
  <div
    className="center-content"
  >
    <div
      className="splash"
    >
      <span
        className="SVGInline logo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg class=\\"SVGInline-svg logo-svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 481.91 121.64\\"><path d=\\"M450.34 70.31l29.61-34.76h-31.56l-19.84 24.68-2.66 3.52V0h-26.33v120.08h26.33V96.02l7.42-7.43 18.44 31.49h30.16l-31.57-49.77zM368.75.08h26.41v120h-26.41zM364.81 63.52q-.23-13.75-9.61-21.65t-25.55-7.89q-16.17 0-26.6 7.65t-10.43 19.9h26.33q0-9.26 9.38-9.26 10.08 0 10.08 11.7v4.48h-8.12q-19.38 0-29.53 7T290.6 96.23a23 23 0 0 0 8.35 18.14 30 30 0 0 0 20.31 7.23q13 0 20.31-9.14a29.69 29.69 0 0 0 2.5 7.58h26.33v-1.33q-3.44-6.17-3.59-17.81V63.52zm-26.41 32.5a13.23 13.23 0 0 1-4.65 4.77 14.69 14.69 0 0 1-8.16 2.11 8.76 8.76 0 0 1-6.17-2.23 7.53 7.53 0 0 1-2.42-5.82q0-12.34 13.75-12.34h7.66v13.52z\\"/><path d=\\"M271.81 35.55l-8.51 49.82-13.28-49.84h-18.36l-13.44 51-8.36-51h-31.83v-21h-6.59c1.31 3.11-5.47 7.1-6.24 9.71-1.47 4.92 2.32 11 1.15 16.33-1.41 6.42-5.85 10.52-11 14.52-.89.7-2.26 1.67-3.69 2.8v18.67c1.36 4.54.92 7.53 5.25 11.43 2.24 2 6 3.84 7.88 5.88a22.93 22.93 0 0 1 3.4 4.64c2.37 5.2 7.2 12.79 6.64 18 .06-.53 0 .13 0 0-.29 3.21-3.79 5.49-6.39 3-1.41-1.36-2-6.24-3.24-8-5.13-7.52-9.18-10.18-13.32-11.49.61 6.58 2.69 11.67 6.27 15.21q6.48 6.41 20.08 6.41a48.61 48.61 0 0 0 14.88-2.27v-18.82a38.63 38.63 0 0 1-6.56.47q-5.08 0-6.8-1.87t-1.72-6.64V53.83h10.9l15.61 66.25h22.27l14.06-50.16 14 50.16h22.27l19.92-84.53h-25.25z\\"/><path d=\\"M158.67 37.82c-.24-6.51-3.56-12.68.53-18.95a18.38 18.38 0 0 1 4.51-4.34h-12v21h-10.79v13.08a26.07 26.07 0 0 0-5.72-6.74q-9.37-7.89-25.55-7.89t-26.6 7.65q-7.6 5.57-9.66 13.59a29.4 29.4 0 0 0-7.75-12.1q-9.69-9.14-26.17-9.14-12.19 0-21.09 5.27A34.41 34.41 0 0 0 4.73 54.37 51.48 51.48 0 0 0 0 76.99v1.09q0 20.47 10.63 32a34 34 0 0 0 7.65 6.24c1.17-1.06 3.55-1.31 4.94-2.06 2.56-1.36 4.74-3.85 6.91-5.69 4.26-3.63 10.12-7.41 12.36-12.5.72-1.63 3.83-10.57 2.72-12.46-2-3.48-8.2-1.59-10.52-1.64-3.87-.08-6.76-.39-9.49-2.72a2 2 0 0 1-.65-1.94c.67-3.15 1.52-7 3.69-9.49 1-1.12 2.84-1.92 3.28-3.38.51-1.66-.94-3.07-1-4.72a.19.19 0 0 1 .28-.16c.7.41 2.26 1.16 3.81 2-6.27-7.84 7.59.45 7.85.5 5.46 1 12.9 2.19 18.37 1.14 3.12-.6 5.73-2 9-2.05 3.71-.05 7.29 1.3 11 1 6.92-.49 13.7-2.72 20.69-3.23 7.55-.55 14.71.58 22.22.83 7.35.25 13.15-3.45 19.15-7a65.83 65.83 0 0 1 6.77-3.56c5.16-2.21 9.22-5.67 9.01-11.37zM75.02 100.06c-5-3.21-7.4-2.07-12.38-.82-2.24.56-4.53.61-6.65 1.55-4.42 2-7.62 5.86-11.85 8.16a105.74 105.74 0 0 0-12.67 8.19 29.86 29.86 0 0 1-4.81 2.78 46.9 46.9 0 0 0 13 1.72q15.7 0 25.66-8.91a29.76 29.76 0 0 0 6.57-8.3 23.52 23.52 0 0 0 7 10 29.64 29.64 0 0 0 3.85 2.8 1.4 1.4 0 0 0 .78-.6c.23-.6-.92-2.94-1-3.62-.45-4.9-3.19-10.16-7.5-12.95zM144.8 98.47a41.22 41.22 0 0 1-4.81-1.22c-1 3.11-.65 4.93.44 7.84.7 1.86 2.23 3 1.71 5.12-.76 3.16-5.38 7.19-9.81 9.86h16.06v-1.33q-3.44-6.17-3.59-17.81v-2.46zM120.65 101.76c-8.29-6.43-22.64-4-32.57-6.45-2 6.72 6.38 18.89 1.6 25a33.38 33.38 0 0 0 9.56 1.35q13 0 20.31-9.14a40.36 40.36 0 0 0 1.49 5.3 5.51 5.51 0 0 0 1-.3 20.29 20.29 0 0 0 5.92-4.73c2.84-4.04-3.85-8.34-7.31-11.03z\\"/></svg>",
          }
        }
      />
      <h3>
        Sets the stage for your Qlik data models
      </h3>
      <div>
        <p>
          WebSocket connected but no open app, in addition the app list was empty.
        </p>
        <p>
          Please make sure there are apps accessible on this engine and reload the page, or connect to another one:
        </p>
        <form
          onSubmit={[Function]}
        >
          <label
            htmlFor="engineURL"
          >
            <input
              defaultValue=""
              id="engineURL"
              type="text"
            />
          </label>
          <input
            type="submit"
            value="Connect"
          />
        </form>
      </div>
    </div>
  </div>,
  <div
    className="cat-with-bubble"
    style={null}
  >
    <span
      className="SVGInline close-me"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg close-me-svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\"><g data-name=\\"Layer 2\\"><g data-name=\\"close\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(180 12 12)\\" opacity=\\"0\\"/><path d=\\"M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z\\"/></g></g></svg>",
        }
      }
      onClick={[Function]}
      title="Hide cat"
    />
    <span
      className="SVGInline cat"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg class=\\"SVGInline-svg cat-svg\\" version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" x=\\"0px\\" y=\\"0px\\"
	 viewBox=\\"0 0 864 864\\" style=\\"enable-background:new 0 0 864 864;\\" xml:space=\\"preserve\\">
<g>
	<path d=\\"M777.1,233.9c0,2.7,0,5.5,0,8.2c-0.3,1.3-0.6,2.7-0.9,4c-1.7,6.7-4.7,12.9-9,18.3c-7.9,9.8-13.5,20.8-18.3,32.2
		c-6.8,16.3-15.5,31.4-26.9,44.9c-6,7.1-11.8,14.4-17.8,21.5c-8.8,10.3-16,21.5-20.3,34.5c-1.9,5.8-5.2,10.9-8.9,15.7
		c-9.3,12.1-18.8,23.9-29.1,35.1c-4.3,4.7-7.5,9.9-8.8,16.2c-1.2,5.8-1.8,11.8-2.1,17.7c-0.5,10.8-1.7,21.4-5.6,31.6
		c-2.5,6.5-3.6,13.3-3.1,20.3c0.4,6.1,0.8,12.2-0.6,18.2c-3.9,16.3-9.2,32-17.6,46.5c-5,8.5-10.5,16.8-18.2,23.1
		c-11.2,9-21.5,19-30.7,29.9c-11,13.1-24.8,22.5-39.3,31c-1.3,0.8-2.7,1.3-4.1,1.9c-10.2,4.4-20.8,7.6-31.4,11.1
		c-0.9,0.3-1.9,0.5-2.7,1c-2.5,1.3-2.8,4.1-0.5,5.9c1,0.8,2.2,1.2,3.4,1.5c2.9,0.7,5.8,1.5,8.8,2.1c17.7,4,35.7,7.2,53.2,12.3
		c20.6,6,41.2,11.7,61.6,18.5c1.4,0.5,2.7,0.9,3.9,1.7c0.7,0.5,1.2,1.2,0.9,2.1c-0.3,1-1.1,1.3-2.1,1.3c-0.5,0-0.9-0.1-1.4-0.2
		c-10-1.3-19.8-3.5-29.6-6c-37.9-9.6-76.4-16.6-113.5-29.3c-2.3-0.8-4.6-0.6-6.4,1.1c-4.1,3.8-3.2,5.8,0.7,7.6
		c8.8,4.1,17.5,8.4,26.4,12.5c34,15.7,66.2,34.5,96.8,56.1c1.2,0.9,2.4,1.8,3.6,2.7c0.9,0.7,1.2,1.7,0.5,2.7
		c-0.7,1.1-1.6,1.1-2.7,0.7c-0.4-0.2-0.9-0.4-1.3-0.6c-18.1-9.3-35.8-19.4-53.7-29c-18.2-9.8-35.9-20.2-54.4-29.3
		c-6.8-3.3-13.6-6.5-20.6-9.3c-2.2-0.9-4.5-1.6-7-1.6c-1.2,0-2.6,0-3.2,1.4c-0.6,1.5,0.5,2.3,1.4,3.1c0.1,0.1,0.2,0.2,0.3,0.3
		c9.3,7.5,18,15.6,26.4,24.1c23.7,23.9,46.9,48.4,69.9,73c2.5,2.7,5.1,5.4,7.6,8.1c0.9,0.9,1.5,1.9,0.5,3.1
		c-1.1,1.3-2.2,0.8-3.2-0.1c-0.2-0.2-0.4-0.4-0.6-0.6c-10.6-10.1-21.3-20.2-31.9-30.3c-25.1-24-50.6-47.6-75.5-71.8
		c-1.8-1.8-3.1-1.9-5.4-0.7c-3.4,1.8-7.5,8.3-6,13.6c1,3.5,2.2,6.9,3.9,10.1c3.2,6.2,6.6,12.3,9.4,18.7
		c7.6,17.4,13.2,35.4,18.4,53.6c3.1,10.8,6.7,21.4,8.5,32.5c0.2,1.3,0.5,2.7-1.2,3.3c-1.7,0.6-2.3-0.7-2.9-1.8
		c-2.2-4.1-4.2-8.3-5.9-12.6c-9.5-24.2-18.9-48.4-28.3-72.5c-3.4-8.8-6.8-17.6-10.4-26.4c-1.7-4.2-4.1-5-7.5-2.5
		c-8.3,6-17.3,10.6-26.1,15.5c-8.5,4.7-16.7,9.7-25.8,13.1c-21.3,8.1-43.5,11.4-66.1,12.7c-16.2,0.9-32.2-1.5-47.4-7.4
		c-9.1-3.6-18.3-6.9-27.6-10.1c-4.1-1.4-8-3.1-11.8-5.2c-4.4-2.4-6.1-2.2-9.4,1.7c-2,2.3-3.9,4.8-6.1,7c-3.7,3.8-8.1,8.2-16.7,14.6
		c-13.3,9.8-26.4,19.3-30.2,22.1c-12.1,8.9-18.2,13.3-21.1,15.8c-6.3,5.5-28.9,21.5-31,21.8c-1.2,0.2-1.8,0.3-2.3,0
		c-1.2-0.8-0.5-3.1-0.6-7.8c0-1.3-0.3-2.6-0.3-3.9c0-215.4,0-430.8,0-646.2c0-0.8,12.1-10,13.8-11.5c5.2-5,9.1-10.9,12.8-17.1
		c3-5.2,4.8-10.9,7.5-16.2c2-3.9,3.4-7.9,4.3-12.2c1.2-6.2,1.6-12.7,3.9-18.7c6.7-17.4,14.9-34,25.9-49.1
		c9.1-12.4,17.3-25.2,23.2-39.4c1.1-2.5,2.7-4.7,4.5-6.9c2.8-3.4,6.3-6.3,9.2-9.7c2.8-3.3,6.1-5.9,10.3-7.2c2.7,0,5.5,0,8.2,0
		c3.3,0.9,6.6,1.9,9.9,2.7c12.2,3,22.6,9.3,31.4,18.2C266,34,274.3,47.2,281.7,61c5.6,10.4,9.7,21.5,14.1,32.4
		c4.1,10.2,9,20,15.5,28.9c4.7,6.4,10.9,10.4,18.7,11.5c11,1.5,21.1,5.2,30.6,10.8c8.5,5,15.9,11.3,23.4,17.7
		c10.5,8.8,21.4,17,33.9,22.7c25.5,11.6,50.3,24.7,75.1,37.8c10.2,5.4,20.3,11.1,31.6,14.3c3.1,0.9,6,2.1,8.7,3.7
		c10,6.1,21.1,7.5,32.5,6.4c11.1-1.2,22.3-2.3,33.4-4.4c11.3-2.1,22.7-4,33.5-8.2c13.9-5.4,28.3-9.6,42.7-13.3
		c14.4-3.7,29-6.3,43.9-7.1c8.4-0.5,16.8-0.2,25.2,0.8c6.4,0.8,12.8,1.6,18.7,4.3C769.8,222.2,775.2,226.4,777.1,233.9z M453,598.1
		c2.3,0,4.6-0.1,7-0.5c11-1.9,21.1-5.9,29.2-13.9c9-8.9,13.6-20,15.6-32.2c0.9-5.1,0-10.1-3.4-14.4c-7.1-9.2-16.3-13.8-28-12.8
		c-2.6,0.2-3.5,1.1-3.6,3.7c-0.1,4.6-0.4,9.2-0.8,13.7c-0.7,7.5-3.1,14.4-7.9,20.4c-2.1,2.6-4.3,5-7.1,6.7c-3.9,2.3-7.9,0.5-8.3-3.9
		c-1.2-11.8,0.5-22.9,10-31.3c1.4-1.2,2.5-2.7,3-4.6c0.7-2.6-0.9-5.1-3.5-5.1c-4.9-0.1-9.7-0.1-14.5,1c-10.6,2.4-18.7,8.6-26.2,16.1
		c-6.4,6.4-8,14-6,22.5C413,583.2,432.2,598.1,453,598.1z M226.5,513.7c5.4-0.1,12.5-1.2,18.9-5.1c7.6-4.6,12.7-11.4,16.5-19.2
		c1-2,1.4-4.3,0.9-6.6c-2.7-10.3-6.6-20-14.2-27.8c-2.7-2.8-5.8-5.1-9.4-6.4c-2.7-1-5,0.7-5,3.6c0,0.6,0,1.2,0.1,1.8
		c0.4,2.3,0.1,4.7-0.3,6.9c-2,10-8.2,17.2-16.2,22.9c-3.7,2.7-7.8,1.2-9.4-3.2c-1.3-3.5-1.4-7.1-1.4-10.7c0.1-6.7,2.7-12.5,6.5-17.9
		c2-2.7,4.2-5.2,6.2-7.9c3-3.9,2.5-6.5-1.6-9.2c-3.6-2.3-7.4-3.8-11.7-4.3c-12.2-1.5-24,4.7-28.2,17c-2.7,7.9-2.9,15.8-1.7,23.9
		C179.9,495.9,200.1,513.7,226.5,513.7z\\"/>
</g>
</svg>

<!-- This svg is purchased from https://www.etsy.com/listing/530737983/peeking-black-cat-svg-silhouette-clipart. Please read and follow the 'For Commercial Use'.   -->",
        }
      }
    />
    <p
      className="bubble"
      onClick={[Function]}
      style={
        Object {
          "width": "7em",
        }
      }
    >
      Click my speech bubble to open the demo app.
    </p>
  </div>,
]
`;

exports[`'should render docList correctly' 1`] = `
Array [
  <div
    className="center-content"
  >
    <div
      className="splash"
    >
      <span
        className="SVGInline logo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg class=\\"SVGInline-svg logo-svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 481.91 121.64\\"><path d=\\"M450.34 70.31l29.61-34.76h-31.56l-19.84 24.68-2.66 3.52V0h-26.33v120.08h26.33V96.02l7.42-7.43 18.44 31.49h30.16l-31.57-49.77zM368.75.08h26.41v120h-26.41zM364.81 63.52q-.23-13.75-9.61-21.65t-25.55-7.89q-16.17 0-26.6 7.65t-10.43 19.9h26.33q0-9.26 9.38-9.26 10.08 0 10.08 11.7v4.48h-8.12q-19.38 0-29.53 7T290.6 96.23a23 23 0 0 0 8.35 18.14 30 30 0 0 0 20.31 7.23q13 0 20.31-9.14a29.69 29.69 0 0 0 2.5 7.58h26.33v-1.33q-3.44-6.17-3.59-17.81V63.52zm-26.41 32.5a13.23 13.23 0 0 1-4.65 4.77 14.69 14.69 0 0 1-8.16 2.11 8.76 8.76 0 0 1-6.17-2.23 7.53 7.53 0 0 1-2.42-5.82q0-12.34 13.75-12.34h7.66v13.52z\\"/><path d=\\"M271.81 35.55l-8.51 49.82-13.28-49.84h-18.36l-13.44 51-8.36-51h-31.83v-21h-6.59c1.31 3.11-5.47 7.1-6.24 9.71-1.47 4.92 2.32 11 1.15 16.33-1.41 6.42-5.85 10.52-11 14.52-.89.7-2.26 1.67-3.69 2.8v18.67c1.36 4.54.92 7.53 5.25 11.43 2.24 2 6 3.84 7.88 5.88a22.93 22.93 0 0 1 3.4 4.64c2.37 5.2 7.2 12.79 6.64 18 .06-.53 0 .13 0 0-.29 3.21-3.79 5.49-6.39 3-1.41-1.36-2-6.24-3.24-8-5.13-7.52-9.18-10.18-13.32-11.49.61 6.58 2.69 11.67 6.27 15.21q6.48 6.41 20.08 6.41a48.61 48.61 0 0 0 14.88-2.27v-18.82a38.63 38.63 0 0 1-6.56.47q-5.08 0-6.8-1.87t-1.72-6.64V53.83h10.9l15.61 66.25h22.27l14.06-50.16 14 50.16h22.27l19.92-84.53h-25.25z\\"/><path d=\\"M158.67 37.82c-.24-6.51-3.56-12.68.53-18.95a18.38 18.38 0 0 1 4.51-4.34h-12v21h-10.79v13.08a26.07 26.07 0 0 0-5.72-6.74q-9.37-7.89-25.55-7.89t-26.6 7.65q-7.6 5.57-9.66 13.59a29.4 29.4 0 0 0-7.75-12.1q-9.69-9.14-26.17-9.14-12.19 0-21.09 5.27A34.41 34.41 0 0 0 4.73 54.37 51.48 51.48 0 0 0 0 76.99v1.09q0 20.47 10.63 32a34 34 0 0 0 7.65 6.24c1.17-1.06 3.55-1.31 4.94-2.06 2.56-1.36 4.74-3.85 6.91-5.69 4.26-3.63 10.12-7.41 12.36-12.5.72-1.63 3.83-10.57 2.72-12.46-2-3.48-8.2-1.59-10.52-1.64-3.87-.08-6.76-.39-9.49-2.72a2 2 0 0 1-.65-1.94c.67-3.15 1.52-7 3.69-9.49 1-1.12 2.84-1.92 3.28-3.38.51-1.66-.94-3.07-1-4.72a.19.19 0 0 1 .28-.16c.7.41 2.26 1.16 3.81 2-6.27-7.84 7.59.45 7.85.5 5.46 1 12.9 2.19 18.37 1.14 3.12-.6 5.73-2 9-2.05 3.71-.05 7.29 1.3 11 1 6.92-.49 13.7-2.72 20.69-3.23 7.55-.55 14.71.58 22.22.83 7.35.25 13.15-3.45 19.15-7a65.83 65.83 0 0 1 6.77-3.56c5.16-2.21 9.22-5.67 9.01-11.37zM75.02 100.06c-5-3.21-7.4-2.07-12.38-.82-2.24.56-4.53.61-6.65 1.55-4.42 2-7.62 5.86-11.85 8.16a105.74 105.74 0 0 0-12.67 8.19 29.86 29.86 0 0 1-4.81 2.78 46.9 46.9 0 0 0 13 1.72q15.7 0 25.66-8.91a29.76 29.76 0 0 0 6.57-8.3 23.52 23.52 0 0 0 7 10 29.64 29.64 0 0 0 3.85 2.8 1.4 1.4 0 0 0 .78-.6c.23-.6-.92-2.94-1-3.62-.45-4.9-3.19-10.16-7.5-12.95zM144.8 98.47a41.22 41.22 0 0 1-4.81-1.22c-1 3.11-.65 4.93.44 7.84.7 1.86 2.23 3 1.71 5.12-.76 3.16-5.38 7.19-9.81 9.86h16.06v-1.33q-3.44-6.17-3.59-17.81v-2.46zM120.65 101.76c-8.29-6.43-22.64-4-32.57-6.45-2 6.72 6.38 18.89 1.6 25a33.38 33.38 0 0 0 9.56 1.35q13 0 20.31-9.14a40.36 40.36 0 0 0 1.49 5.3 5.51 5.51 0 0 0 1-.3 20.29 20.29 0 0 0 5.92-4.73c2.84-4.04-3.85-8.34-7.31-11.03z\\"/></svg>",
          }
        }
      />
      <h3>
        Sets the stage for your Qlik data models
      </h3>
      <div>
        <p>
          WebSocket connected, but no open app. Choose one below:
        </p>
        <ul
          className="doc-list"
        >
          <li
            onClick={[Function]}
          >
            <i
              className="icon"
            />
            <span
              className="title"
            >
              <b>
                Consumer_Sales
              </b>
               
              (
              See through the eyes of a consumer goods company.  Analyze sales data by sales rep, by region, by product, etc.
              )
            </span>
          </li>
          <li
            onClick={[Function]}
          >
            <i
              className="icon"
            />
            <span
              className="title"
            >
              <b>
                FDA - Drug Cases
              </b>
               
              (
              This Dashboard is based on the 2015 Q4 data.
              )
            </span>
          </li>
          <li
            onClick={[Function]}
          >
            <i
              className="icon"
            />
            <span
              className="title"
            >
              <b>
                New_QVNCycles_with_measures_dimensions_visualizations_
              </b>
               
              (
              An app with some measures and dimensions and master visualizations.
Texten finns också på skånska.
              )
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    className="cat-with-bubble"
    style={null}
  >
    <span
      className="SVGInline close-me"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg close-me-svg\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\"><g data-name=\\"Layer 2\\"><g data-name=\\"close\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(180 12 12)\\" opacity=\\"0\\"/><path d=\\"M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z\\"/></g></g></svg>",
        }
      }
      onClick={[Function]}
      title="Hide cat"
    />
    <span
      className="SVGInline cat"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg class=\\"SVGInline-svg cat-svg\\" version=\\"1.1\\" id=\\"Layer_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" x=\\"0px\\" y=\\"0px\\"
	 viewBox=\\"0 0 864 864\\" style=\\"enable-background:new 0 0 864 864;\\" xml:space=\\"preserve\\">
<g>
	<path d=\\"M777.1,233.9c0,2.7,0,5.5,0,8.2c-0.3,1.3-0.6,2.7-0.9,4c-1.7,6.7-4.7,12.9-9,18.3c-7.9,9.8-13.5,20.8-18.3,32.2
		c-6.8,16.3-15.5,31.4-26.9,44.9c-6,7.1-11.8,14.4-17.8,21.5c-8.8,10.3-16,21.5-20.3,34.5c-1.9,5.8-5.2,10.9-8.9,15.7
		c-9.3,12.1-18.8,23.9-29.1,35.1c-4.3,4.7-7.5,9.9-8.8,16.2c-1.2,5.8-1.8,11.8-2.1,17.7c-0.5,10.8-1.7,21.4-5.6,31.6
		c-2.5,6.5-3.6,13.3-3.1,20.3c0.4,6.1,0.8,12.2-0.6,18.2c-3.9,16.3-9.2,32-17.6,46.5c-5,8.5-10.5,16.8-18.2,23.1
		c-11.2,9-21.5,19-30.7,29.9c-11,13.1-24.8,22.5-39.3,31c-1.3,0.8-2.7,1.3-4.1,1.9c-10.2,4.4-20.8,7.6-31.4,11.1
		c-0.9,0.3-1.9,0.5-2.7,1c-2.5,1.3-2.8,4.1-0.5,5.9c1,0.8,2.2,1.2,3.4,1.5c2.9,0.7,5.8,1.5,8.8,2.1c17.7,4,35.7,7.2,53.2,12.3
		c20.6,6,41.2,11.7,61.6,18.5c1.4,0.5,2.7,0.9,3.9,1.7c0.7,0.5,1.2,1.2,0.9,2.1c-0.3,1-1.1,1.3-2.1,1.3c-0.5,0-0.9-0.1-1.4-0.2
		c-10-1.3-19.8-3.5-29.6-6c-37.9-9.6-76.4-16.6-113.5-29.3c-2.3-0.8-4.6-0.6-6.4,1.1c-4.1,3.8-3.2,5.8,0.7,7.6
		c8.8,4.1,17.5,8.4,26.4,12.5c34,15.7,66.2,34.5,96.8,56.1c1.2,0.9,2.4,1.8,3.6,2.7c0.9,0.7,1.2,1.7,0.5,2.7
		c-0.7,1.1-1.6,1.1-2.7,0.7c-0.4-0.2-0.9-0.4-1.3-0.6c-18.1-9.3-35.8-19.4-53.7-29c-18.2-9.8-35.9-20.2-54.4-29.3
		c-6.8-3.3-13.6-6.5-20.6-9.3c-2.2-0.9-4.5-1.6-7-1.6c-1.2,0-2.6,0-3.2,1.4c-0.6,1.5,0.5,2.3,1.4,3.1c0.1,0.1,0.2,0.2,0.3,0.3
		c9.3,7.5,18,15.6,26.4,24.1c23.7,23.9,46.9,48.4,69.9,73c2.5,2.7,5.1,5.4,7.6,8.1c0.9,0.9,1.5,1.9,0.5,3.1
		c-1.1,1.3-2.2,0.8-3.2-0.1c-0.2-0.2-0.4-0.4-0.6-0.6c-10.6-10.1-21.3-20.2-31.9-30.3c-25.1-24-50.6-47.6-75.5-71.8
		c-1.8-1.8-3.1-1.9-5.4-0.7c-3.4,1.8-7.5,8.3-6,13.6c1,3.5,2.2,6.9,3.9,10.1c3.2,6.2,6.6,12.3,9.4,18.7
		c7.6,17.4,13.2,35.4,18.4,53.6c3.1,10.8,6.7,21.4,8.5,32.5c0.2,1.3,0.5,2.7-1.2,3.3c-1.7,0.6-2.3-0.7-2.9-1.8
		c-2.2-4.1-4.2-8.3-5.9-12.6c-9.5-24.2-18.9-48.4-28.3-72.5c-3.4-8.8-6.8-17.6-10.4-26.4c-1.7-4.2-4.1-5-7.5-2.5
		c-8.3,6-17.3,10.6-26.1,15.5c-8.5,4.7-16.7,9.7-25.8,13.1c-21.3,8.1-43.5,11.4-66.1,12.7c-16.2,0.9-32.2-1.5-47.4-7.4
		c-9.1-3.6-18.3-6.9-27.6-10.1c-4.1-1.4-8-3.1-11.8-5.2c-4.4-2.4-6.1-2.2-9.4,1.7c-2,2.3-3.9,4.8-6.1,7c-3.7,3.8-8.1,8.2-16.7,14.6
		c-13.3,9.8-26.4,19.3-30.2,22.1c-12.1,8.9-18.2,13.3-21.1,15.8c-6.3,5.5-28.9,21.5-31,21.8c-1.2,0.2-1.8,0.3-2.3,0
		c-1.2-0.8-0.5-3.1-0.6-7.8c0-1.3-0.3-2.6-0.3-3.9c0-215.4,0-430.8,0-646.2c0-0.8,12.1-10,13.8-11.5c5.2-5,9.1-10.9,12.8-17.1
		c3-5.2,4.8-10.9,7.5-16.2c2-3.9,3.4-7.9,4.3-12.2c1.2-6.2,1.6-12.7,3.9-18.7c6.7-17.4,14.9-34,25.9-49.1
		c9.1-12.4,17.3-25.2,23.2-39.4c1.1-2.5,2.7-4.7,4.5-6.9c2.8-3.4,6.3-6.3,9.2-9.7c2.8-3.3,6.1-5.9,10.3-7.2c2.7,0,5.5,0,8.2,0
		c3.3,0.9,6.6,1.9,9.9,2.7c12.2,3,22.6,9.3,31.4,18.2C266,34,274.3,47.2,281.7,61c5.6,10.4,9.7,21.5,14.1,32.4
		c4.1,10.2,9,20,15.5,28.9c4.7,6.4,10.9,10.4,18.7,11.5c11,1.5,21.1,5.2,30.6,10.8c8.5,5,15.9,11.3,23.4,17.7
		c10.5,8.8,21.4,17,33.9,22.7c25.5,11.6,50.3,24.7,75.1,37.8c10.2,5.4,20.3,11.1,31.6,14.3c3.1,0.9,6,2.1,8.7,3.7
		c10,6.1,21.1,7.5,32.5,6.4c11.1-1.2,22.3-2.3,33.4-4.4c11.3-2.1,22.7-4,33.5-8.2c13.9-5.4,28.3-9.6,42.7-13.3
		c14.4-3.7,29-6.3,43.9-7.1c8.4-0.5,16.8-0.2,25.2,0.8c6.4,0.8,12.8,1.6,18.7,4.3C769.8,222.2,775.2,226.4,777.1,233.9z M453,598.1
		c2.3,0,4.6-0.1,7-0.5c11-1.9,21.1-5.9,29.2-13.9c9-8.9,13.6-20,15.6-32.2c0.9-5.1,0-10.1-3.4-14.4c-7.1-9.2-16.3-13.8-28-12.8
		c-2.6,0.2-3.5,1.1-3.6,3.7c-0.1,4.6-0.4,9.2-0.8,13.7c-0.7,7.5-3.1,14.4-7.9,20.4c-2.1,2.6-4.3,5-7.1,6.7c-3.9,2.3-7.9,0.5-8.3-3.9
		c-1.2-11.8,0.5-22.9,10-31.3c1.4-1.2,2.5-2.7,3-4.6c0.7-2.6-0.9-5.1-3.5-5.1c-4.9-0.1-9.7-0.1-14.5,1c-10.6,2.4-18.7,8.6-26.2,16.1
		c-6.4,6.4-8,14-6,22.5C413,583.2,432.2,598.1,453,598.1z M226.5,513.7c5.4-0.1,12.5-1.2,18.9-5.1c7.6-4.6,12.7-11.4,16.5-19.2
		c1-2,1.4-4.3,0.9-6.6c-2.7-10.3-6.6-20-14.2-27.8c-2.7-2.8-5.8-5.1-9.4-6.4c-2.7-1-5,0.7-5,3.6c0,0.6,0,1.2,0.1,1.8
		c0.4,2.3,0.1,4.7-0.3,6.9c-2,10-8.2,17.2-16.2,22.9c-3.7,2.7-7.8,1.2-9.4-3.2c-1.3-3.5-1.4-7.1-1.4-10.7c0.1-6.7,2.7-12.5,6.5-17.9
		c2-2.7,4.2-5.2,6.2-7.9c3-3.9,2.5-6.5-1.6-9.2c-3.6-2.3-7.4-3.8-11.7-4.3c-12.2-1.5-24,4.7-28.2,17c-2.7,7.9-2.9,15.8-1.7,23.9
		C179.9,495.9,200.1,513.7,226.5,513.7z\\"/>
</g>
</svg>

<!-- This svg is purchased from https://www.etsy.com/listing/530737983/peeking-black-cat-svg-silhouette-clipart. Please read and follow the 'For Commercial Use'.   -->",
        }
      }
    />
    <p
      className="bubble"
      onClick={[Function]}
      style={
        Object {
          "width": "7em",
        }
      }
    >
      Click my speech bubble to open the demo app.
    </p>
  </div>,
]
`;
